add size section

--- a/admin/footer.html
+++ b/admin/footer.html
@@ -11,9 +11,9 @@
  <!-- Main Footer -->
  <footer class="main-footer text-center">
      <!-- To the right -->
-     <div class="float-right d-none d-sm-inline">
+     <!-- <div class="float-right d-none d-sm-inline">
          <a href="logout.php" type="button" class="btn btn-default">Logout</a>
-     </div>
+     </div> -->
      <!-- Default to the left -->
      <strong>Copyright &copy; 2022. Created By <a
              href="https://github.com/naingminkhant16">naingminkhant16</a>.</strong> All
