--- a/admin/footer.html
+++ b/admin/footer.html
@@ -27,15 +27,18 @@
  <!-- jQuery -->
  <script src="plugins/jquery/jquery.min.js"></script>
  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.js"></script>
- <!-- Bootstrap 4 -->
- <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+ <!-- Bootstrap  -->
+ <!-- JavaScript Bundle with Popper -->
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+ </script>
  <!-- AdminLTE App -->
  <script src="dist/js/adminlte.min.js"></script>
  <!-- data table  -->
  <script>
      $(document).ready(function () {
          $('#d-table').DataTable({
-             
+
          });
      });
  </script>
