category and tag section

--- a/admin/footer.html
+++ b/admin/footer.html
@@ -37,9 +37,8 @@
  <!-- data table  -->
  <script>
      $(document).ready(function () {
-         $('#d-table').DataTable({
-
-         });
+         $('#d-table').DataTable({});
+         $('.d-table').DataTable({});
      });
  </script>
  </body>
